Check for null pointer

BUG: 295340